--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,5 +27,6 @@
       ></include>
       <include src="./partials/footer.html"></include>
     </div>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
