--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <title>Adalab Web Starter Kit Node JS</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
   <body>
     <div class="page">
-      <include src="./partials/header.html" title="Bienvenidos a Adalab"></include>
+      <include
+        src="./partials/header.html"
+        title="Bienvenidos a Adalab"
+      ></include>
       <include src="./partials/main.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
