Change HTML to adapt to new partials and fix some paths.

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Adalab Web Starter Kit</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <link rel="stylesheet" href="./scss/main.scss" />
+    <link rel="icon" href="./images/favicon.png" />
   </head>
 
   <body>
     <div class="page">
-      <include src="./partials/header.html" title="Bienvenidos a Adalab"></include>
-      <include src="./partials/main.html"></include>
-      <include src="./partials/footer.html"></include>
+      <load src="./partials/header.html" title="Bienvenidos a Adalab" />
+      <load src="./partials/main.html" />
+      <load src="./partials/footer.html" />
     </div>
-    <script src="./assets/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
