--- a/src/more-info.html
+++ b/src/more-info.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Adalab Web Starter Kit</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./scss/main.scss" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
   <body>
     <div class="page">
-      <include src="./partials/header.html" title="Otra página del starter kit"></include>
+      <load src="/partials/header.html" title="Otra página del starter kit" />
       <main>
         <p>
           Esta es otra segunda página del Starter kit. Mira el fichero
@@ -19,8 +19,8 @@
           que te ha traído hasta aquí.
         </p>
       </main>
-      <include src="./partials/footer.html"></include>
+      <load src="/partials/footer.html" />
     </div>
-    <script src="./assets/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
