--- a/src/more-info.html
+++ b/src/more-info.html
@@ -6,12 +6,12 @@
     <title>Adalab Web Starter Kit</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./scss/main.scss" />
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <link rel="icon" href="./images/favicon.png" />
   </head>
 
   <body>
     <div class="page">
-      <load src="/partials/header.html" title="Otra página del starter kit" />
+      <load src="./partials/header.html" title="Otra página del starter kit" />
       <main>
         <p>
           Esta es otra segunda página del Starter kit. Mira el fichero
@@ -19,7 +19,7 @@
           que te ha traído hasta aquí.
         </p>
       </main>
-      <load src="/partials/footer.html" />
+      <load src="./partials/footer.html" />
     </div>
     <script src="./js/main.js"></script>
   </body>
