--- a/src/more-info.html
+++ b/src/more-info.html
@@ -18,6 +18,14 @@
           <code class="code">./src/html/partials/main.html</code> para cómo hemos creado el enlace
           que te ha traído hasta aquí.
         </p>
+        <p>
+          <load
+          src="./partials/link.html"
+          aClass="link__adalab"
+          text="Volver a la página principal"
+          url="./index.html"
+        />
+        </p>
       </main>
       <load src="./partials/footer.html" />
     </div>
