--- a/src/more-info.html
+++ b/src/more-info.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Adalab Web Starter Kit</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./scss/main.scss" />
-    <link rel="icon" href="./images/favicon.png" />
+    <link rel="icon" href="/images/favicon.png" />
   </head>
 
   <body>
@@ -15,16 +18,16 @@
       <main>
         <p>
           Esta es otra segunda página del Starter kit. Mira el fichero
-          <code class="code">./src/html/partials/main.html</code> para cómo hemos creado el enlace
-          que te ha traído hasta aquí.
+          <code class="code">./src/html/partials/main.html</code> para cómo
+          hemos creado el enlace que te ha traído hasta aquí.
         </p>
         <p>
           <load
-          src="./partials/link.html"
-          aClass="link__adalab"
-          text="Volver a la página principal"
-          url="./index.html"
-        />
+            src="./partials/link.html"
+            aClass="link__adalab"
+            text="Volver a la página principal"
+            url="./index.html"
+          />
         </p>
       </main>
       <load src="./partials/footer.html" />
